--- a/index.html
+++ b/index.html
@@ -118,17 +118,103 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> 
+                           <!-- blog section start-->
     <section class="blog-section">
           <div class="blog-contant">
             <h1>Run an Extra <br>
               Mile Easily</h1>
-            <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+            <p>Running boosts energy, improves health, strengthens muscles, clears the mind, enhances stamina, promotes discipline, burns calories, and ensures vitality.</p>
             <button class="btn-join-2">Join Now</button>
           </div>
           <div class="blog-img">
             <img src="images/run.jpg" alt="" style="height: 280px; width: 350;">
           </div>
     </section>
+                          <!-- blog section End-->
+                           <!--section exercice start-->
+   <section class="section-exercises" >
+          <div class="exer-des">
+              <h1 style="color: aliceblue; font-size: 48px;">Trainings and Exercises</h1> <br>
+              <p  style="color: rgba(255, 255, 255, 0.5); font-size: 18px;">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p> 
+          </div>
+          <div class="exer-img-1">
+             <div class="exer-line1-img1"><img src="images/exercise1.jpg" alt=""></div>
+             <div class="exer-line1-img2"><img src="images/exercise2.png" alt=""></div>
+             <div class="exer-line1-img3"><img src="images/exercise3.png" alt=""></div>
+          </div>
+          <div class="exer-img-1">
+            <div class="exer-line1-img4"> <img src="images/exercise4.png" alt=""></div>
+            <div class="exer-line1-img5"> <img src="images/exercise5.jpg" alt=""></div>
+            <div class="exer-line1-img6"> <img src="images/exercise6.jpg" alt=""></div>
+          </div>
+   </section> 
+                        <!--section exercice end-->      
+   <section class="bmi-section">
+          <div class="bmi-des">
+            <h1 style="color: aliceblue; font-size: 42px;">BMI Calculator</h1>
+            <p  style="font-size: 16px; color: rgba(255, 255, 255, 0.5);">"BMI calculator measures body mass index, evaluates weight relative to height, aiding health assessment efficiently."</p>
+          </div>
+
+   </section>
+                         <!--bmi table start-->
+   <section class="bmi-section2">
+         <table class="bmi-table" ">
+              <caption  ><h1 style="background:  rgb(34, 34, 34)">BMI Calculator Chart</h1></caption>
+              <tr>
+                <td><h4>BMI</h4></td>
+                <td><h4>Weight Status</h4></td>
+              </tr>
+              <tr>
+                <td>Bleow 18.5</td>
+                <td>Underweight</td>
+              </tr>
+              <tr>
+                <td>18.5-24-9</td>
+                <td>Healthy</td>
+              </tr>
+              <tr>
+                <td>25.0-29.9</td>
+                <td>Overweight</td>
+              </tr>
+              <tr>
+                <td>30.0-and Above</td>
+                <td>Obese</td>
+              </tr>
+         </table>
+                 <!--bmi table end--> 
+         <div class="bmi-calculate">
+             
+             <div class="cal-des">
+              <h1>Calculate your BMI</h1>
+              <p style="background:  rgb(34, 34, 34);">We believe fitness should be accessible to everyone, <br>everywhere, regardless of income or access to a gym. </p>
+             </div>
+
+             <form action="" >
+        
+                <label for="height"></label>
+                <input type="number" id="height" placeholder="Height/cm">
+                <label for="Weight"></label>
+                <input type="number" id="Weight" placeholder="Weight/kg"><br>
+                <label for="age"></label>
+                <input type="number" id="age" placeholder="Age">
+                <label for="sex"></label> 
+                <select name="sex" id="sex" required >
+                    <option value="">Sex</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="other">Other</option>
+                </select><br>
+                <label for="factor"></label>
+                <select name="factor" id="factor" required>
+                    <option value="" >Select an activity factor</option>
+                    <option value="****">*****</option>
+                    <option value="****">*****</option>
+                    <option value="****">*****</option>
+              </select><br><br>
+              <button class="calculate-btn">Calculate</button>
+             </form>
+         </div>         
+   </section>                                    
   </body>
 </html>
