--- a/index.html
+++ b/index.html
@@ -1,220 +1,291 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style/style.css" />
-  </head>
 
-  <body class="container">
-    <section class="banner" >
-      <nav class="nav-bar">
-        <div class="logo-t">
-          <h2 >Healthy Life</h2>
-          <div class="menu-icon"></div>
-        </div>
-        <div class="nav-item">
-          <ul class="horizontal-list">
-            <li>
-              <button class="home-btn">
-                <a href="">Home</a>
-              </button>
-            </li>
-            <li><a href="">Service</a></li>
-            <li><a href="">Contect</a></li>
-            <li><a href="">About</a></li>
-          </ul>
-        </div>
-      </nav>
-      <!--nav content-->
-      <div class="nav-content">
-        <div class="nav-des">
-          <h1>
-            Get body in <br />
-            <span>shape</span> & stay <br />
-            healthy
-          </h1>
-          <p>
-            A healthy life involves balanced eating, regular exercise, proper
-            sleep, stress control, hydration, hygiene, mindfulness, positive
-            relationships, and avoiding harmful habits.
-          </p>
-          <button class="btn-join">Join Club Now!</button>
-          <button class="btn-dwn">Download App</button>
-        </div>
-        <div class="nav-img">
-          <img src="images/Images 2.png" alt="" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style/style.css" />
+</head>
 
-          <div style="position: relative">
-            <div class="card1">
-              <div style="background-color: transparent">
-                <h2 style="color: white; background-color: transparent">
-                  500+
-                </h2>
-                <p style="color: gray; background-color: transparent">
-                  Free workout video
-                </p>
-              </div>
-            </div>
-            <div class="card2">
-              <div class="rounded-color"></div>
-              <div style="background-color: transparent">
-                <h2 style="color: white; background-color: transparent">
-                  350+
-                </h2>
-                <p style="color: gray; background-color: transparent">
-                  video tutorial
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+<body class="container">
+  <section class="banner">
+    <nav class="nav-bar">
+      <div class="logo-t">
+        <h2>Healthy Life</h2>
       </div>
-    </section>
-    <section>
-      <div>
-        <h1 class="Change-your">Change Your Habits</h1>
-        <p class="we-believe">
-          We believe fitness should be accessible to everyone, everywhere,
-          regardless of income or access to a gym.
+      <div class="nav-item">
+        <ul class="horizontal-list">
+          <li>
+            <button class="home-btn">
+              <a href="">Home</a>
+            </button>
+          </li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Contect</a></li>
+          <li><a href="">About</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!--nav content-->
+    <div class="nav-content">
+      <div class="nav-des">
+        <h1>
+          Get body in <br />
+          <span>shape</span> & stay <br />
+          healthy
+        </h1>
+        <p>
+          A healthy life involves balanced eating, regular exercise, proper
+          sleep, stress control, hydration, hygiene, mindfulness, positive
+          relationships, and avoiding harmful habits.
         </p>
+        <button class="btn-join">Join Club Now!</button>
+        <button class="btn-dwn">Download App</button>
       </div>
-      <div class="change-img-part">
-        <div class="figure-caption">
-          <figure>
-            <img class="imgages" src="images/image 3.png" alt="" />
-          </figure>
-          <div style="padding-top: 20px;">
-            <h3 style="text-align: center; color: white;">Movement</h3>
-            <p style="text-align: center; color: gray;">Movement energizes life, fosters growth, builds strength.</p>
+      <div class="nav-img">
+        <img src="images/Images 2.png" alt="" />
+
+        <div style="position: relative">
+          <div class="card1">
+            <div style="background-color: transparent">
+              <h2 style="color: white; background-color: transparent">
+                500+
+              </h2>
+              <p style="color: gray; background-color: transparent">
+                Free workout video
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="figure-caption">
-          <figure>
-            <img class="imgages" src="images/image 2.png" alt="" />
-          </figure>
-          <div style="padding-top: 20px;">
-            <h3 style="text-align: center; color: white;">Time</h3>
-            <p style="text-align: center; color: gray;">Time flies, cherish moments, prioritize your goals.</p>
-          </div>
-        </div>
-        <div class="figure-caption">
-          <figure>
-            <img class="imgages" src="images/image 4.png" alt="" />
-          </figure>
-          <div style="padding-top: 20px;">
-            <h3 style="text-align: center; color: white;">Practice</h3>
-            <p style="text-align: center; color: gray;">Practice improves skills, builds confidence, ensures success"</p>
-          </div>
-        </div>
-        <div class="figure-caption">
-          <figure>
-            <img class="imgages" src="images/image 5.png" alt="" />
-          </figure>
-          <div style="padding-top: 20px;">
-            <h3 style="text-align: center; color: white;">Weight Loss</h3>
-            <p style="text-align: center; color: gray;">Eat healthy, exercise regularly, stay consistent daily.</p>
+          <div class="card2">
+            <div class="rounded-color"></div>
+            <div style="background-color: transparent">
+              <h2 style="color: white; background-color: transparent">
+                350+
+              </h2>
+              <p style="color: gray; background-color: transparent">
+                video tutorial
+              </p>
+            </div>
           </div>
         </div>
       </div>
-    </section> 
-                           <!-- blog section start-->
-    <section class="blog-section">
-          <div class="blog-contant">
-            <h1>Run an Extra <br>
-              Mile Easily</h1>
-            <p>Running boosts energy, improves health, strengthens muscles, clears the mind, enhances stamina, promotes discipline, burns calories, and ensures vitality.</p>
-            <button class="btn-join-2">Join Now</button>
-          </div>
-          <div class="blog-img">
-            <img src="images/run.jpg" alt="" style="height: 280px; width: 350;">
-          </div>
-    </section>
-                          <!-- blog section End-->
-                           <!--section exercice start-->
-   <section class="section-exercises" >
-          <div class="exer-des">
-              <h1 style="color: aliceblue; font-size: 48px;">Trainings and Exercises</h1> <br>
-              <p  style="color: rgba(255, 255, 255, 0.5); font-size: 18px;">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p> 
-          </div>
-          <div class="exer-img-1">
-             <div class="exer-line1-img1"><img src="images/exercise1.jpg" alt=""></div>
-             <div class="exer-line1-img2"><img src="images/exercise2.png" alt=""></div>
-             <div class="exer-line1-img3"><img src="images/exercise3.png" alt=""></div>
-          </div>
-          <div class="exer-img-1">
-            <div class="exer-line1-img4"> <img src="images/exercise4.png" alt=""></div>
-            <div class="exer-line1-img5"> <img src="images/exercise5.jpg" alt=""></div>
-            <div class="exer-line1-img6"> <img src="images/exercise6.jpg" alt=""></div>
-          </div>
-   </section> 
-                        <!--section exercice end-->      
-   <section class="bmi-section">
-          <div class="bmi-des">
-            <h1 style="color: aliceblue; font-size: 42px;">BMI Calculator</h1>
-            <p  style="font-size: 16px; color: rgba(255, 255, 255, 0.5);">"BMI calculator measures body mass index, evaluates weight relative to height, aiding health assessment efficiently."</p>
-          </div>
+    </div>
+  </section>
+  <section>
+    <div>
+      <h1 class="Change-your">Change Your Habits</h1>
+      <p class="we-believe">
+        We believe fitness should be accessible to everyone, everywhere,
+        regardless of income or access to a gym.
+      </p>
+    </div>
+    <div class="change-img-part">
+      <div class="figure-caption">
+        <figure>
+          <img class="imgages" src="images/image 3.png" alt="" />
+        </figure>
+        <div style="padding-top: 20px;">
+          <h3 style="text-align: center; color: white;">Movement</h3>
+          <p style="text-align: center; color: gray;">Movement energizes life, fosters growth, builds strength.</p>
+        </div>
+      </div>
+      <div class="figure-caption">
+        <figure>
+          <img class="imgages" src="images/image 2.png" alt="" />
+        </figure>
+        <div style="padding-top: 20px;">
+          <h3 style="text-align: center; color: white;">Time</h3>
+          <p style="text-align: center; color: gray;">Time flies, cherish moments, prioritize your goals.</p>
+        </div>
+      </div>
+      <div class="figure-caption">
+        <figure>
+          <img class="imgages" src="images/image 4.png" alt="" />
+        </figure>
+        <div style="padding-top: 20px;">
+          <h3 style="text-align: center; color: white;">Practice</h3>
+          <p style="text-align: center; color: gray;">Practice improves skills, builds confidence, ensures success"</p>
+        </div>
+      </div>
+      <div class="figure-caption">
+        <figure>
+          <img class="imgages" src="images/image 5.png" alt="" />
+        </figure>
+        <div style="padding-top: 20px;">
+          <h3 style="text-align: center; color: white;">Weight Loss</h3>
+          <p style="text-align: center; color: gray;">Eat healthy, exercise regularly, stay consistent daily.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- blog section start-->
+  <section class="blog-section">
+    <div class="blog-contant">
+      <h1>Run an Extra <br>
+        Mile Easily</h1>
+      <p>Running boosts energy, improves health, strengthens muscles, clears the mind, enhances stamina, promotes
+        discipline, burns calories, and ensures vitality.</p>
+      <button class="btn-join-2">Join Now</button>
+    </div>
+    <div class="blog-img">
+      <img src="images/run.jpg" alt="" style="height: 280px; width: 350;">
+    </div>
+  </section>
+  <!-- blog section End-->
+  <!--section exercice start-->
+  <section class="section-exercises">
+    <div class="exer-des">
+      <h1 style="color: aliceblue; font-size: 48px;">Trainings and Exercises</h1> <br>
+      <p style="color: rgba(255, 255, 255, 0.5); font-size: 18px;">We believe fitness should be accessible to everyone,
+        everywhere, regardless of income or access to a gym.</p>
+    </div>
+    <div class="exer-img-1">
+      <div class="exer-line1-img1">
+        <img src="images/exercise1.jpg" alt="">
+        <div class="exer-img-opacity-1"></div>
+      </div>
+      <div class="exer-line1-img2"> 
+        <img src="images/exercise2.png" alt="">
+        <div class="exer-img-opacity-2"></div>
+    </div>
+      <div class="exer-line1-img3"><img src="images/exercise3.png" alt=""></div>
+    </div>
+    <div class="exer-img-1">
+      <div class="exer-line1-img4"> <img src="images/exercise4.png" alt=""></div>
+      <div class="exer-line1-img5"> 
+        <img src="images/exercise5.jpg" alt="">
+         <div class="exer-img-opacity-5"></div>
+      </div>
+      <div class="exer-line1-img6">
+         <img src="images/exercise6.jpg" alt="">
+         <div class="exer-img-opacity-6"></div>
+        </div>
+    </div>
+  </section>
+  <!--section exercice end-->
+  <section class="bmi-section">
+    <div class="bmi-des">
+      <h1 style="color: aliceblue; font-size: 42px;">BMI Calculator</h1>
+      <p style="font-size: 16px; color: rgba(255, 255, 255, 0.5);">"BMI calculator measures body mass index, evaluates
+        weight relative to height, aiding health assessment efficiently."</p>
+    </div>
 
-   </section>
-                         <!--bmi table start-->
-   <section class="bmi-section2">
-         <table class="bmi-table" ">
-              <caption  ><h1 style="background:  rgb(34, 34, 34)">BMI Calculator Chart</h1></caption>
-              <tr>
-                <td><h4>BMI</h4></td>
-                <td><h4>Weight Status</h4></td>
-              </tr>
-              <tr>
-                <td>Bleow 18.5</td>
-                <td>Underweight</td>
-              </tr>
-              <tr>
-                <td>18.5-24-9</td>
-                <td>Healthy</td>
-              </tr>
-              <tr>
-                <td>25.0-29.9</td>
-                <td>Overweight</td>
-              </tr>
-              <tr>
-                <td>30.0-and Above</td>
-                <td>Obese</td>
-              </tr>
-         </table>
-                 <!--bmi table end--> 
-         <div class="bmi-calculate">
-             
-             <div class="cal-des">
-              <h1>Calculate your BMI</h1>
-              <p style="background:  rgb(34, 34, 34);">We believe fitness should be accessible to everyone, <br>everywhere, regardless of income or access to a gym. </p>
-             </div>
+  </section>
+  <!--bmi table start-->
+  <section class="bmi-section2">
+    <table class="bmi-table" ">
+              <caption  ><h1 style=" background: rgb(34, 34, 34)">BMI Calculator Chart</h1>
+      </caption>
+      <tr>
+        <td>
+          <h4>BMI</h4>
+        </td>
+        <td>
+          <h4>Weight Status</h4>
+        </td>
+      </tr>
+      <tr>
+        <td>Bleow 18.5</td>
+        <td>Underweight</td>
+      </tr>
+      <tr>
+        <td>18.5-24-9</td>
+        <td>Healthy</td>
+      </tr>
+      <tr>
+        <td>25.0-29.9</td>
+        <td>Overweight</td>
+      </tr>
+      <tr>
+        <td>30.0-and Above</td>
+        <td>Obese</td>
+      </tr>
+    </table>
+    <!--bmi table end-->
+    <div class="bmi-calculate">
 
-             <form action="" >
-        
-                <label for="height"></label>
-                <input type="number" id="height" placeholder="Height/cm">
-                <label for="Weight"></label>
-                <input type="number" id="Weight" placeholder="Weight/kg"><br>
-                <label for="age"></label>
-                <input type="number" id="age" placeholder="Age">
-                <label for="sex"></label> 
-                <select name="sex" id="sex" required >
-                    <option value="">Sex</option>
-                    <option value="male">Male</option>
-                    <option value="female">Female</option>
-                    <option value="other">Other</option>
-                </select><br>
-                <label for="factor"></label>
-                <select name="factor" id="factor" required>
-                    <option value="" >Select an activity factor</option>
-                    <option value="****">*****</option>
-                    <option value="****">*****</option>
-                    <option value="****">*****</option>
-              </select><br><br>
-              <button class="calculate-btn">Calculate</button>
-             </form>
-         </div>         
-   </section>                                    
-  </body>
+      <div class="cal-des">
+        <h1>Calculate your BMI</h1>
+        <p style="background:  rgb(34, 34, 34);">We believe fitness should be accessible to everyone, <br>everywhere,
+          regardless of income or access to a gym. </p>
+      </div>
+
+      <form action="">
+
+        <label for="height"></label>
+        <input type="number" id="height" placeholder="Height/cm">
+        <label for="Weight"></label>
+        <input type="number" id="Weight" placeholder="Weight/kg"><br>
+        <label for="age"></label>
+        <input type="number" id="age" placeholder="Age">
+        <label for="sex"></label>
+        <select name="sex" id="sex" required>
+          <option value="">Sex</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+          <option value="other">Other</option>
+        </select><br>
+        <label for="factor"></label>
+        <select name="factor" id="factor" required>
+          <option value="">Select an activity factor</option>
+          <option value="****">*****</option>
+          <option value="****">*****</option>
+          <option value="****">*****</option>
+        </select><br><br>
+        <button class="calculate-btn">Calculate</button>
+      </form>
+    </div>
+  </section>
+  <section class="meet-team">
+    <div class="team-content">
+      <h1 style="font-size: 38px;">Meet Our Team</h1><br>
+      <p style="font-size: 18px; color: rgba(255, 255, 255, 0.5);">We believe fitness should be accessible to everyone,<br>everywhere, regardless of income or access to a gym.</p>
+      </div>     
+  </section>
+  <section class="team-meet-all">
+    <div class="team-meet">
+      <img src="images/trainer1.png" alt="" style="height: 230px; width: 350px;">
+      <img src="images/trainer2.png" alt="" style="height: 230px; width: 350px;">
+      <img src="images/trainer3.png" alt="" style="height: 230px; width: 350px;">
+      <img src="images/trainer4.png" alt="" style="height: 230px; width: 350px;">
+      <img src="images/trainer5.png" alt="" style="height: 230px; width: 350px;">
+      <img src="images/trainer6.png" alt="" style="height: 230px; width: 350px;">
+    </div>
+  </section>
+           <!--fotter start -->
+  <footer>
+   <div>
+    <div class="footer-all">
+      <div class="footer-part-1">
+        <h2 class="logo-t">Healthy Life</h2>
+        <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+    </div>
+    <div class="footer-part-2">
+        <ul>
+          <li> <h3 style="color: aliceblue;">Get Started</h3></li><br>
+          <li>Service</li><br>
+          <li>Contact Us</li><br>
+          <li>Affiliate Program</li><br>
+          <li>About Us</li>
+        </ul>
+    </div>
+    <div class="footer-part-2">
+      <ul>
+        <li><h3 style="color: aliceblue;">Get Started</h3></li><br>
+        <li>Fitness</li><br>
+        <li>Platform</li><br>
+        <li>Workout Libary</li><br>
+        <li>App Design</li>
+      </ul>
+    </div>
+   </div>
+ 
+ <div class="band-name">
+  <hr>
+  <p>All right reserved @Fitness 2024</p>
+ </div>
+  </footer>
+</body>
+
 </html>
